// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ForgotPassword renders ForgotPassword with desktop view 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        style="width: 100%; display: flex; flex-direction: column; min-height: 100vh; background-color: rgb(239, 241, 249); align-items: center;"
      >
        <div
          class="sc-UblHX gPycWq"
        >
          <div
            class="sc-blHHSb kTKyqX"
          >
            Password Reset
          </div>
          <div
            class="sc-frniUE gDAuDV"
          >
            <div
              class="sc-egkSDF cGFidm"
            >
              Enter your email and we will send you information on how to reset your password
            </div>
          </div>
          <div
            style="margin-bottom: 16px; margin-top: 60px;"
          >
            <div
              class="sc-gtLWhw jPWJOW"
            >
              Email
            </div>
            <input
              aria-label="Email"
              class="sc-kLhKbu gjDzjv"
              placeholder="Enter your email..."
              style="max-width: 320px; min-width: 200px; width: 80vw;"
              type="text"
              value=""
            />
          </div>
          <button
            buttontype="primary"
            class="sc-ghWlax hYhlzt"
            disabled=""
            style="margin-top: 24px; margin-bottom: 16px; max-width: 320px; min-width: 200px; width: 80vw; background-color: rgb(182, 180, 185);"
            type="submit"
          >
            Reset password
          </button>
          <div
            class="sc-fufdwm dzrqEa"
          >
            <a
              href="/sign-in"
            >
              Sign In
            </a>
          </div>
          <div
            class="sc-fufdwm dzrqEa"
          >
            Don't have an account? 
            <a
              href="/sign-up"
            >
              Sign Up
            </a>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      style="width: 100%; display: flex; flex-direction: column; min-height: 100vh; background-color: rgb(239, 241, 249); align-items: center;"
    >
      <div
        class="sc-UblHX gPycWq"
      >
        <div
          class="sc-blHHSb kTKyqX"
        >
          Password Reset
        </div>
        <div
          class="sc-frniUE gDAuDV"
        >
          <div
            class="sc-egkSDF cGFidm"
          >
            Enter your email and we will send you information on how to reset your password
          </div>
        </div>
        <div
          style="margin-bottom: 16px; margin-top: 60px;"
        >
          <div
            class="sc-gtLWhw jPWJOW"
          >
            Email
          </div>
          <input
            aria-label="Email"
            class="sc-kLhKbu gjDzjv"
            placeholder="Enter your email..."
            style="max-width: 320px; min-width: 200px; width: 80vw;"
            type="text"
            value=""
          />
        </div>
        <button
          buttontype="primary"
          class="sc-ghWlax hYhlzt"
          disabled=""
          style="margin-top: 24px; margin-bottom: 16px; max-width: 320px; min-width: 200px; width: 80vw; background-color: rgb(182, 180, 185);"
          type="submit"
        >
          Reset password
        </button>
        <div
          class="sc-fufdwm dzrqEa"
        >
          <a
            href="/sign-in"
          >
            Sign In
          </a>
        </div>
        <div
          class="sc-fufdwm dzrqEa"
        >
          Don't have an account? 
          <a
            href="/sign-up"
          >
            Sign Up
          </a>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`ForgotPassword renders ForgotPassword with mobile view 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        style="width: 100%; display: flex; flex-direction: column; min-height: 100vh; background-color: rgb(239, 241, 249); align-items: center;"
      >
        <div
          class="sc-UblHX gaOlys"
        >
          <div
            class="sc-blHHSb kTKyqX"
          >
            Password Reset
          </div>
          <div
            class="sc-frniUE gDAuDV"
          >
            <div
              class="sc-egkSDF cGFidm"
            >
              Enter your email and we will send you information on how to reset your password
            </div>
          </div>
          <div
            style="margin-bottom: 16px; margin-top: 60px;"
          >
            <div
              class="sc-gtLWhw jPWJOW"
            >
              Email
            </div>
            <input
              aria-label="Email"
              class="sc-kLhKbu gjDzjv"
              placeholder="Enter your email..."
              style="min-height: 48px; min-width: 320px;"
              type="text"
              value=""
            />
          </div>
          <button
            buttontype="primary"
            class="sc-ghWlax hYhlzt"
            disabled=""
            style="margin-top: 24px; margin-bottom: 16px; width: 320px; background-color: rgb(182, 180, 185);"
            type="submit"
          >
            Reset password
          </button>
          <div
            class="sc-fufdwm dzrqEa"
          >
            <a
              href="/sign-in"
            >
              Sign In
            </a>
          </div>
          <div
            class="sc-fufdwm dzrqEa"
          >
            Don't have an account? 
            <a
              href="/sign-up"
            >
              Sign Up
            </a>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      style="width: 100%; display: flex; flex-direction: column; min-height: 100vh; background-color: rgb(239, 241, 249); align-items: center;"
    >
      <div
        class="sc-UblHX gaOlys"
      >
        <div
          class="sc-blHHSb kTKyqX"
        >
          Password Reset
        </div>
        <div
          class="sc-frniUE gDAuDV"
        >
          <div
            class="sc-egkSDF cGFidm"
          >
            Enter your email and we will send you information on how to reset your password
          </div>
        </div>
        <div
          style="margin-bottom: 16px; margin-top: 60px;"
        >
          <div
            class="sc-gtLWhw jPWJOW"
          >
            Email
          </div>
          <input
            aria-label="Email"
            class="sc-kLhKbu gjDzjv"
            placeholder="Enter your email..."
            style="min-height: 48px; min-width: 320px;"
            type="text"
            value=""
          />
        </div>
        <button
          buttontype="primary"
          class="sc-ghWlax hYhlzt"
          disabled=""
          style="margin-top: 24px; margin-bottom: 16px; width: 320px; background-color: rgb(182, 180, 185);"
          type="submit"
        >
          Reset password
        </button>
        <div
          class="sc-fufdwm dzrqEa"
        >
          <a
            href="/sign-in"
          >
            Sign In
          </a>
        </div>
        <div
          class="sc-fufdwm dzrqEa"
        >
          Don't have an account? 
          <a
            href="/sign-up"
          >
            Sign Up
          </a>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
